# MineHaskell

./: .gitignore  MineHaskell.cabal  MolecularAssembler.hs  README.md  dev.yml  flake.nix  hie.yaml  package.yaml  project.nix  release.nix  shell.nix
.github/workflows/: test.yml
app/: Main.hs
src/: MolecularAssembler.hs
test/: Spec.hs
