cabal-version:      2.4
name:               MineHaskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jon
maintainer:         dyercode@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
    build-depends:    base < 5
    default-language: Haskell2010
    ghc-options:
      -Wall
      -- -fprof-auto -rtsopts

library
    import:           shared-properties
    build-depends:    either
    exposed-modules:  MolecularAssembler
    hs-source-dirs:   src

executable MineHaskellExe
    import:           shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:    MolecularAssembler

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    MineHaskell,either
    hs-source-dirs:   app


Test-Suite tests
    import:           shared-properties
    type:             exitcode-stdio-1.0
    -- type:             detailed-0.9
    -- test-module:      Spec
    build-depends:    MineHaskell,
                      tasty,
                      tasty-hunit,
                      hedgehog,
                      tasty-hedgehog,
                      either
    hs-source-dirs:   test
    main-is:          Spec.hs

